Add negative tabindex on disabled navigation tabs

--- a/emails/templates/cms-detail.html
+++ b/emails/templates/cms-detail.html
@@ -54,7 +54,7 @@ a.btn-primary {
                     </tr>
                     <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
                         <td class="content-wrap" style="margin: 0; box-sizing: border-box; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; vertical-align: top; padding: 20px; border-left: 1px solid #e9e9e9; border-bottom: 1px solid #e9e9e9; border-right: 1px solid #e9e9e9; border-bottom-right-radius: 20px; background-color: #fff;">
-                            <table lass="content-wrap__table" width="100%" cellpadding="0" cellspacing="0" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; table-layout: fixed;">
+                            <table class="content-wrap__table" width="100%" cellpadding="0" cellspacing="0" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; table-layout: fixed;">
 
                                 <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
                                     <td class="content-block" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 0 0 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; mso-line-height-rule: exactly; line-height:150%;">
