--- a/views/pulsar/v2/helpers/tabs.html.twig
+++ b/views/pulsar/v2/helpers/tabs.html.twig
@@ -31,9 +31,11 @@
                 {% if tab.disabled is defined and tab.disabled == true %}
                     {% set href = '#' %}
                     {% set type = 'link' %}
+                    {% set tabindex = '-1' %}
                 {% else %}
                     {% set href = '#' ~ tab.id %}
                     {% set type = 'tab' %}
+                    {% set tabindex = '0' %}
                     {%
                         if tab.src is defined
                         and tab.src != null
@@ -66,7 +68,8 @@
                         'label': tab.label,
                         'href': href,
                         'data-toggle': type,
-                        'disabled': tab.disabled|default(false)
+                        'disabled': tab.disabled|default(false),
+                        'tabindex': tabindex
                     })
                 %}
                 {{ html.link(options|merge(tab.data|default({}))) }}
