--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -76,7 +76,7 @@
           "id"    : "colours",
           "label" : "Colours",
           "href"  : "?tab=colours",
-          "src"   : tab_colours,
+          "src"   : tab_colours
         },
         {
           "id"    : "buttons",
