--- a/stylesheets/_component.toggle-switch.scss
+++ b/stylesheets/_component.toggle-switch.scss
@@ -31,7 +31,7 @@
     }
 
     &:focus + .toggle-switch-label {
-        box-shadow: 0 0 0 2px white, 0 0 2px 5px highlight;
+        box-shadow: 0 0 0 2px white, 0 0 0 4px color(primary);
     }
 
     &.toggle-switch--large + .toggle-switch-label {
@@ -57,7 +57,7 @@
     font-size: 2em;
     height: 1em;
     position: relative;
-    transition: .4s;
+    transition: left .4s, right .4s;
     vertical-align: middle;
     width: 2em;
 
