--- a/stylesheets/_component.range-slider.scss
+++ b/stylesheets/_component.range-slider.scss
@@ -120,7 +120,6 @@
     }
 
     &:focus {
-        border: 0;
-        box-shadow: 0 0 0 2px white, 0 0 0 4px color(primary);
+        box-shadow: 0 0 0 2px white, 0 0 2px 5px highlight;
     }
 }
