--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -527,8 +527,8 @@ fieldset {
 .form__control.radio {
     appearance: none;
     background-color: #fafafa;
-    border: 1px solid color(border);
-    box-shadow: none;
+    border: 0;
+    box-shadow: inset 0 0 0 1px color(border);
     height: 20px;
     position: relative;
     width: 20px;
@@ -539,24 +539,16 @@ fieldset {
 
     &:focus {
         border-color: color(primary);
-        box-shadow: 0 0 0 1px color(primary);
-    }
-
-    &:checked {
-        border-color: color(grey, light);
-    }
-
-    &:focus:checked {
-        border-color: color(primary);
+        box-shadow: 0 0 0 2px color(primary);
     }
 
     &::before {
         content: '';
         font-family: 'FontAwesome';
         height: 20px;
-        left: 1px;
+        left: 2px;
         position: absolute;
-        top: -15px;
+        top: -14px;
     }
 
     &:focus:checked::before {
@@ -574,8 +566,8 @@ fieldset {
 
     &:checked::before {
         content: '\f111';
-        font-size: 14px;
-        left: 3px;
+        font-size: 13.5px;
+        left: 3.9px;
     }
 }
 
