--- a/views/lexicon/patterns/filters/create-filter.html.twig
+++ b/views/lexicon/patterns/filters/create-filter.html.twig
@@ -35,7 +35,7 @@
                 {{
                     form.select2({
                         'label': 'Colour',
-                        'id': 'colour',
+                        'id': 'colour-4',
                         'multiple': true,
                         'placeholder': 'Choose one or more',
                         'options': {
@@ -48,7 +48,7 @@
                 {{
                     form.select2({
                         'label': 'Size',
-                        'id': 'size',
+                        'id': 'size-4',
                         'placeholder': 'Choose one',
                         'options': {
                             '': '',
@@ -62,28 +62,28 @@
                 {{
                     form.text({
                         'label': 'Text field example',
-                        'id': 'foo4'
+                        'id': 'foo-4'
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added from',
-                        'id': 'addedFrom4',
+                        'id': 'addedFrom-4',
                     })
                 }}
 
                 {{
                     form.date({
                         'label': 'Added to',
-                        'id': 'addedTo4'
+                        'id': 'addedTo-4'
                     })
                 }}
 
                 {{
                     form.checkbox({
                         'label': 'In stock',
-                        'id': 'inStock4'
+                        'id': 'inStock-4'
                     })
                 }}
 
