Rename tab IDs to avoid duplication

--- a/views/lexicon/patterns/settings/tab.html.twig
+++ b/views/lexicon/patterns/settings/tab.html.twig
@@ -68,7 +68,7 @@
 
         {{
             form.toggle_switch({
-                'id': 'optional-question-tab',
+                'id': 'optional-question-tab-1',
                 'label': 'Hide optional questions with no response',
                 'checked': true
             })
