Remove unnecessary type in script declaration

--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -74,8 +74,8 @@
 {% endif %}
     ></script>
 
-    <script src="{{ base_path ~ 'js/main.js' }}" type="text/javascript"></script>
-    <script src="{{ base_path ~ 'dist/js/lexicon-bundle.js' }}" type="text/javascript"></script>
+    <script src="{{ base_path ~ 'js/main.js' }}" ></script>
+    <script src="{{ base_path ~ 'dist/js/lexicon-bundle.js' }}" ></script>
 
     {% block pageStyle %}{% endblock %}
 </head>
