Restore grid column sizes for form controls

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -354,6 +354,7 @@ fieldset {
     @for $i from 1 through 9 {
         .control__label + .controls > .form__control.form__control-col--#{$i},
         .form__control-col--#{$i} .control__label + .controls > .form__control,
+        .form__control-col--#{$i} .control__label + .controls > .form__control:not(.checkbox):not(.radio),
         .form__control-col--#{$i} .control__label + .controls > .form__control + .select2 {
             @include col-span-width($i, 9);
         }
