Fix issue preventing select full hitting full width

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -364,7 +364,7 @@ fieldset {
 
         // 1. allow input-specific widths for fine-grained control
         // 2. allow a class on the main group to control the width of it's controls
-        .form__control.form__control--#{$variant},
+        .form__group--#{$variant}.form__group--#{$variant} .form__control,
         .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control,
         .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control + .select2 {
             width: #{$width};
