Change name of no-margin utility class for consistency

--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -324,12 +324,12 @@ div.no-results {
     width: auto !important;
 }
 
-%u-no-margin-top,
-.u-no-margin-top {
+%u-margin-top-none,
+.u-margin-top-none {
     margin-top: 0 !important;
 }
 
-%u-no-margin-bottom,
-.u-no-margin-bottom {
+%u-margin-bottom-none,
+.u-margin-bottom-none {
     margin-bottom: 0 !important;
 }
