Fix missed utility class change for bottomless

--- a/stylesheets/_deprecated.styles.scss
+++ b/stylesheets/_deprecated.styles.scss
@@ -514,5 +514,5 @@ $susy: (
 // -----------------------------------------------------------------------------
 
 .bottomless {
-    @extend %u-no-margin-bottom;
+    @extend %u-margin-bottom-none;
 }
