--- a/stylesheets/_deprecated.styles.scss
+++ b/stylesheets/_deprecated.styles.scss
@@ -514,5 +514,5 @@ $susy: (
 // -----------------------------------------------------------------------------
 
 .bottomless {
-    @extend %u-margin-bottom-none;
+    margin-bottom: 0 !important;
 }
