Make sure checkboxes/radios maintain specific widths

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -531,8 +531,8 @@ fieldset {
     // margin-top: 17px;
 }
 
-.form__control.checkbox,
-.form__control.radio {
+.form__control.checkbox.checkbox,
+.form__control.radio.radio {
     appearance: none;
     background-color: #fafafa;
     border: 0;
