--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -485,7 +485,9 @@ fieldset {
 
     // Position elements outside of the container as display:none or
     // visibility:hidden causes the inputs to stop being interactive in IE8
-    .form__control.form__control {
+    .form__control.form__control,
+    .form__control.form__control.checkbox,
+    .form__control.form__control.radio {
         left: -9999px;
         position: absolute;
         top: 0;
