Arrange Aphabetically the Tabs

--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -60,106 +60,89 @@
 {%
     set tabs_content = [
         {
-          "id"    : "grid",
-          "label" : "Grid",
-          "href"  : "?tab=grid",
-          "src"   : tab_grid,
-        },
-        {
-          "id"    : "cards",
-          "label" : "Cards",
-          "href"  : "?tab=cards",
-          "src"   : tab_cards,
-          "active": true
-        },
-        {
-          "id"    : "colours",
-          "label" : "Colours",
-          "href"  : "?tab=colours",
-          "src"   : tab_colours
-        },
-        {
           "id"    : "buttons",
           "label" : "Buttons",
-          "href"  : "?tab=buttons",
-          "src"   : tab_buttons
-        },
-        {
-          "id"    : "icons",
-          "label" : "Icons",
-          "href"  : "?tab=icons",
-          "src"   : tab_icons
-        },
-        {
-          "id"    : "flash",
-          "label" : "Flash messages",
-          "href"  : "?tab=flash",
-          "src"   : tab_flash
-        },
-        {
-          "id"    : "favicon",
-          "label" : "Favicon",
-          "href"  : "?tab=favicon",
-          "src"   : tab_favicon
+          "src"   : tab_buttons,
+          "active": true
         },
         {
           "id"    : "block-list",
           "label" : "Block List",
-          "href"  : "?tab=block-list",
           "src"   : tab_block_list
+        },
+        {
+          "id"    : "cards",
+          "label" : "Cards",
+          "src"   : tab_cards
+        },
+        {
+          "id"    : "colours",
+          "label" : "Colours",
+          "src"   : tab_colours
+        },
+        {
+          "id"    : "grid",
+          "label" : "Grid",
+          "src"   : tab_grid
+        },
+        {
+          "id"    : "favicon",
+          "label" : "Favicon",
+          "src"   : tab_favicon
+        },
+        {
+          "id"    : "flash",
+          "label" : "Flash messages",
+          "src"   : tab_flash
+        },
+        {
+          "id"    : "icons",
+          "label" : "Icons",
+          "src"   : tab_icons
         },
         {
           "id"    : "loading",
           "label" : "Loading",
-          "href"  : "?tab=loading",
           "src"   : tab_loading
         },
         {
           "id"    : "media",
           "label" : "Media",
-          "href"  : "?tab=media",
           "src"   : tab_media
         },
         {
           "id"    : "messages",
           "label" : "Messages",
-          "href"  : "?tab=messages",
           "src"   : tab_message
         },
         {
           "id"    : "metadata",
           "label" : "Metadata",
-          "href"  : "?tab=metadata",
           "src"   : tab_metadata
         },
         {
           "id"    : "pagination",
           "label" : "Pagination",
-          "href"  : "?tab=pagination",
           "src"   : tab_pagination
         },
         {
           "id"    : "panels",
           "label" : "Panels",
-          "href"  : "?tab=panels",
           "src"   : tab_panels
         },
         {
           "id"    : "progress",
           "label" : "Progress bars",
-          "href"  : "?tab=progress",
           "src"   : tab_progress_bars
         },
         {
           "id"    : "table",
           "label" : "Table",
-          "href"  : "?tab=table",
           "src"   : tab_data_grid
         },
         {
           "id"    : "tooltips",
           "label" : "Tooltips",
-          "href"  : "?tab=tooltips",
           "src"   : tab_tooltips
         }
     ]
