--- a/views/lexicon/modules.html.twig
+++ b/views/lexicon/modules.html.twig
@@ -18,15 +18,10 @@
 {%
     set tabs_content = [
         {
-          "id"    : "modals",
-          "label" : "Modals",
-          "src"   : tab_modals,
+          "id"    : "drag-drop-zone",
+          "label" : "DropZone",
+          "src"   : tab_dropzone,
           "active": true
-        },
-        {
-          "id"    : "popovers",
-          "label" : "Popovers",
-          "src"   : tab_popovers
         },
         {
           "id"    : "filters",
@@ -34,9 +29,14 @@
           "src"   : tab_filters
         },
         {
-          "id"    : "drag-drop-zone",
-          "label" : "DropZone",
-          "src"   : tab_dropzone
+          "id"    : "modals",
+          "label" : "Modals",
+          "src"   : tab_modals
+        },
+        {
+          "id"    : "popovers",
+          "label" : "Popovers",
+          "src"   : tab_popovers
         }
     ]
 %}
