Tidy up styles extension in documentation

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -105,7 +105,7 @@ $fa-css-prefix: 'icon';
         @import '../../stylesheets/_component.popovers';
     }
 
-    @import '../../stylesheets/_component.progress-bars.scss';
+    @import '../../stylesheets/_component.progress-bars';
     @import '../../stylesheets/_component.progress-lists';
     @import '../../stylesheets/_component.panels';
     @import '../../stylesheets/_component.range-slider';
