--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -390,7 +390,8 @@ fieldset {
         }
     }
 
-    .form__group .input-group .form__control {
+    // Bumping specificity to compete with .form__group--#{$variant}.form__group--#{$variant} .form__control:not(.checkbox):not(.radio),
+    .form__group.form__group .input-group .form__control.form__control {
         width: 100%;
     }
 }
