fix radio tick issue - radios now show dots rather than ticks

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -567,7 +567,9 @@ fieldset {
     &:focus:checked::before {
         color: color(primary);
     }
+}
 
+.form__control.checkbox {
     &:checked::before {
         color: color(text);
         content: '\f00c';
