Make sure items added in ‘more’ navigation have correct typeface
This is an issue with products which add an ‘icon’ class to the nav-item, and cause FontAwesome to override Proxima Nova.

--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -207,6 +207,7 @@ $nav-color-darker: darken(color(jadu-blue, dark), 10%) !default;
 
 .nav-item {
     list-style-type: none;
+    font-family: $font-family-regular;
 }
 
 .nav-divider {
