Make sure nav item headers use light, not regular

--- a/stylesheets/_component.nav-list.scss
+++ b/stylesheets/_component.nav-list.scss
@@ -17,6 +17,7 @@
 	border-bottom: 1px solid $nav-color-light;
 	color: #fff;
 	display: block;
+	font-family: $font-family-light;
 	font-size: 1.2em;
 	margin-bottom: 24px;
 
