Changed the way normalize.css is loaded into pulsar to make it more compatible with sass

--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -16,7 +16,7 @@ $ie-version: 12 !default;
 
 // Third party plugins
 // scss-lint:disable all
-@import '../libs/normalize-css/normalize.css';
+@import '../libs/normalize-css/normalize';
 @import '../libs/susy/sass/susy';
 // scss-lint:enable all
 
