Substitute br with margin bottom

--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -43,6 +43,7 @@
 .stepped-progressbar {
   background-color: color(gray, lightest);
   display: table;
+  margin-bottom: 30px;
   padding: 20px;
   width: 100%;
 
