--- a/docs/_sass/_base.scss
+++ b/docs/_sass/_base.scss
@@ -52,14 +52,13 @@ img {
 table:not(.table) {
     margin-bottom: 1rem;
     width: 100%;
-    font-size: 85%;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #ccc;
     border-collapse: collapse;
 
     td,
     th {
         padding: .25rem .5rem;
-        border: 1px solid #e5e5e5;
+        border: 1px solid #ccc;
     }
 
     th {
