--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -1,14 +1,26 @@
-// Layout
-//
-// Styles for managing the structural hierarchy of the site.
-
 .content {
-    margin: 0 auto;
-    width: 95%;
-    max-width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr;
+    position: relative;
 
-    @include respond-min($screen-desktop) {
-        width: 80%;
+    @include respond-min($screen-tablet) {
+        grid-template-columns: 1fr 5fr;
+    }
+}
+
+.page {
+    border-left: 1px solid #ccc;
+    padding: .7rem 50px 0 50px;
+    position: relative;
+    max-width: 1000px;
+    width: 100%;
+}
+
+.is-open + .page {
+    left: 94%;
+
+    @include respond-min($screen-tablet) {
+        left: 0;
     }
 }
 
@@ -16,56 +28,37 @@ footer {
   margin-bottom: 2rem;
 }
 
-.header {
+.brand {
     background-color: $pulsar-main;
-    background-image: linear-gradient(to top, darken($pulsar-main, 5) 0%, $pulsar-main 100%);
-    color: #fff;
-    display: block;
-    margin-bottom: 2rem;
-    padding: 1.5rem 0 .5rem;
-    text-align: center;
-    text-shadow: 0 2px 1px #161e22;
-    width: 100%;
-
-    h1 {
-        letter-spacing: 1px;
-        margin-bottom: 0;
-        margin-top: .5rem;
-    }
+    font-weight: lighter;
+    letter-spacing: 5px;
+    margin: 0 0 1rem 0;
+    padding: 1rem 1.5rem;
+    text-transform: uppercase;
 
     a {
-        color: white;
+        color: #fff;
     }
 }
 
 .brand-image {
-    border: 3px solid white;
-    border-radius: 100px;
-    box-shadow: 0 2px 1px #161e22;
-    display: block;
+    border: 1px solid white;
+    border-radius: 30px;
+    display: inline-block;
     margin: 0 auto;
-    vertical-align: middle;
-    width: 100px;
+    vertical-align: top;
+    width: 30px;
 }
 
-.header-links {
-    margin: 2rem 0;
-}
+.nav-toggle {
+    font-size: 1.5rem;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    left: .5rem;
 
-.header-link {
-    border: .5px solid white;
-    border-radius: 5px;
-    color: white;
-    font-size: .9rem;
-    padding: .75rem;
-    background-color: rgba(255, 255, 255, .05);
-    margin: 0 .5rem;
-    text-shadow: none;
-    text-decoration: none;
-
-    &:hover {
-        background-color: rgba(255, 255, 255, .1);
-        text-decoration: none;
+    @include respond-min($screen-tablet) {
+        opacity: 0;
     }
-
 }
+
