--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -14,22 +14,22 @@ $blue: #268bd2;
 $brown: #8f5536;
 
 $root-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$root-font-size: 14px;
+$root-font-size: 16px;
+$large-font-size: 1.25rem;
 $root-line-height: 1.5;
 
 $body-color: #515151;
 $body-bg: #fff;
-$link-color: $blue;
 
 $border-color: #e5e5e5;
 
 $large-breakpoint: 38em;
-$large-font-size: 20px;
 
 $code-font-family: Menlo, Monaco, "Courier New", monospace;
 $code-color: #bf616a;
 
 $pulsar-main: #638395;
+$link-color: $pulsar-main;
 
 
 // Extra small screen / small mobile
