--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -7,7 +7,7 @@
 @import "mixins";
 @import "base";
 @import "type";
-@import "syntax";
+// @import "syntax";
 @import "code";
 @import "layout";
 @import "posts";
