Specify font size to avoid Stepped Progress Bar Breaking

--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -83,6 +83,7 @@
     border: 1px solid color(gray);
     border-radius: 50%;
     display: block;
+    font-size: 16px;
     height: 26px;
     text-align: center;
     width: 26px;
