Hound tweaks for doc styles

--- a/docs/_sass/_type.scss
+++ b/docs/_sass/_type.scss
@@ -14,7 +14,9 @@
         margin-top: 1.5rem;
     }
 
-    h4, h5, h6 {
+    h4,
+    h5,
+    h6 {
         font-size: 1rem;
         margin: 1rem 0;
     }
