--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -10,7 +10,7 @@
 
 .page {
     border-left: 1px solid #ccc;
-    padding: .7rem 50px 0 50px;
+    padding: .7rem 50px 0;
     position: relative;
     max-width: 1000px;
     width: 100%;
@@ -32,7 +32,7 @@ footer {
     background-color: $pulsar-main;
     font-weight: lighter;
     letter-spacing: 5px;
-    margin: 0 0 1rem 0;
+    margin: 0 0 1rem;
     padding: 1rem 1.5rem;
     text-transform: uppercase;
 
