--- a/docs/_sass/_sidebar.scss
+++ b/docs/_sass/_sidebar.scss
@@ -1,21 +1,20 @@
 .sidebar {
     background-color: #f1efee;
     box-shadow: inset 0 0 10px 0 #ccc;
-    min-width: 250px;
-
-    ol {
-        list-style-type: none;
-        margin-top: 0;
-        padding-left: 0;
-    }
-
     right: 100%;
+    min-width: 250px;
     position: absolute;
 
     @include respond-min($screen-tablet) {
         left: 0;
         position: relative;
         width: 100%;
+    }
+
+    ol {
+        list-style-type: none;
+        margin-top: 0;
+        padding-left: 0;
     }
 
     &.is-open {
@@ -32,7 +31,7 @@
 }
 
 .sidebar-nav-header {
-    background-color: rgba(255,255,255,.5);
+    background-color: rgba(255, 255, 255, .5);
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     font-size: $large-font-size;
