--- a/docs/_sass/_prettify.scss
+++ b/docs/_sass/_prettify.scss
@@ -1,3 +1,4 @@
+// scss-lint:disable all
 /*! Color themes for Google Code Prettify | MIT License | github.com/jmblog/color-themes-for-google-code-prettify */
 .prettyprint {
   background: #fff;
@@ -116,3 +117,4 @@ li.L9 {
     color: #900;
   }
 }
+// scss-lint:enable all
