Use flexbox instead of css grid

--- a/docs/_sass/_code.scss
+++ b/docs/_sass/_code.scss
@@ -45,7 +45,11 @@ pre.prettyprint {
 }
 
 pre.prettyprint {
+    white-space: -moz-pre-line;
+    white-space: -pre-line;
+    white-space: -o-pre-line;
     white-space: pre-line;
+    word-wrap: break-word;
 }
 
 // Pygments via Jekyll
