--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -1,19 +1,19 @@
 .content {
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
     position: relative;
 
-    @include respond-min($screen-tablet) {
-        grid-template-columns: 1fr 5fr;
-    }
+    // @include respond-min($screen-tablet) {
+    //     -ms-grid-columns: 250px auto;
+    //     grid-template-columns: 250px auto;
+    // }
 }
 
 .page {
     border-left: 1px solid #ccc;
     padding: .7rem 50px 0;
     position: relative;
-    max-width: 1000px;
-    width: 100%;
+    // max-width: 1000px;
+    // width: 100%;
 }
 
 .is-open + .page {
