Restore max-width

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -12,7 +12,7 @@
     border-left: 1px solid #ccc;
     padding: .7rem 50px 0;
     position: relative;
-    // max-width: 1000px;
+    max-width: 1000px;
     // width: 100%;
 }
 
