--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -3,25 +3,23 @@
     {% import _self as nav %}
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 
-<nav class="nav-main"><!--
- --><div class="nav-primary t-nav-primary"><!--
-
-     --><a href="{{ options.brand_link|default('#') }}" class="jadu-branding">
-            <span class="jadu-logomark"></span><!--
-         --><span class="jadu-wordmark">Jadu</span>
-        </a><!--
-
-     --><ul class="nav-items">
+<nav class="nav-main">
+    <div class="nav-primary t-nav-primary">
+        <a href="{{ options.brand_link|default('#') }}" class="jadu-branding">
+            <span class="jadu-logomark"></span>
+            <span class="jadu-wordmark">Jadu</span>
+        </a>
+        <ul class="nav-items">
             {% if options.data is iterable %}
                 {% for label, options in options.data %}
                     {{ nav.nav_item(options) }}
                 {% endfor %}
             {% endif %}
         </ul>
-    </div><!--
+    </div>
 
- --><div class="nav-secondary t-nav-secondary">
-
+    <div class="nav-secondary t-nav-secondary">
+        
         <a href="#close" class="nav-close" data-nav-action="close" aria-hidden="true">{{ html.icon('remove', { 'label': 'Close' }) }}</a>
 
         {% if options.data is iterable %}
@@ -48,9 +46,9 @@
             {% endfor %}
         {% endif %}
 
-    </div><!--
+    </div>
 
---><div class="nav-tertiary">
+    <div class="nav-tertiary t-nav-tertiary">
 
         <a href="#close" class="nav-close" data-nav-action="close" aria-hidden="true">{{ html.icon('remove', { 'label': 'Close' }) }}</a>
 
@@ -65,9 +63,9 @@
             {% endif %}
         </div>
 
-    </div><!--
+    </div>
 
---><div class="nav-quaternary">
+    <div class="nav-quaternary t-nav-quaternary">
 
         <a href="#close" class="nav-close-ltr" data-nav-action="close" aria-hidden="true">{{ html.icon('remove', { 'label': 'Close' }) }}</a>
 
@@ -95,7 +93,6 @@
                {% endfor %}
            {% endif %}
     </div>
-
 </nav>
 
 {% endspaceless %}
