Changed forms to navigations

--- a/stylesheets/_config.theme.scss
+++ b/stylesheets/_config.theme.scss
@@ -126,7 +126,7 @@ $state-info-bg:                  #d9edf7 !default;
 $state-info-border:              darken($state-info-bg, 10%) !default;
 
 // -----------------------------------------------------------------------------
-//  Forms
+//  Navigation
 // -----------------------------------------------------------------------------
 
 $nav-color-light: color(jadu-blue, dark) !default;
