[a11y] Increase contrast of ‘back to top’ link icon
Issue:
1.4.1 Use of Color - It appears that color is the only distinguishing feature about links in blocks of text.

Resolved by:
G183 Using a contrast ratio of 3:1 with surrounding text and providing additional visual cues on focus for links or controls where color alone is used to identify them

--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -48,7 +48,7 @@
     }
 
     a {
-        color: $gray-light;
+        color: color(gray, darker);
         line-height: 16px;
         padding: 0;
         text-decoration: none;
