[a11y] Add alt text to placeholder images in Cards examples

--- a/views/lexicon/tabs/cards.html.twig
+++ b/views/lexicon/tabs/cards.html.twig
@@ -88,7 +88,7 @@
     </div>
 
     <div class="card g-col g-col--3">
-        <img src="http://via.placeholder.com/1000x700/cccccc/000000" class="card-img" />
+        <img src="http://via.placeholder.com/1000x700/cccccc/000000" class="card-img" alt="Placeholder image" />
         <div class="card__body card__body--light">
             <h3 class="card__title">Card Title</h3>
             <p>This is the card body, it should be helpful and descriptive.</p>
@@ -102,7 +102,7 @@
     </div>
 
     <div class="card g-col g-col--3 card--full-bleed">
-        <img src="http://via.placeholder.com/1000x700/cccccc/000000" class="card-img" />
+        <img src="http://via.placeholder.com/1000x700/cccccc/000000" class="card-img" alt="Placeholder image" />
         <div class="card__body card__body--light">
             <h3 class="card__title">Card Title</h3>
             <p>This is the card body, it should be helpful and descriptive.</p>
