--- a/views/pulsar/v2/helpers/tabs.html.twig
+++ b/views/pulsar/v2/helpers/tabs.html.twig
@@ -22,7 +22,7 @@
         {% set tab_active = tabs[0].id %}
     {% endif %}
 
-    <div class="nav-inline t-nav-inline">
+    <div class="nav-inline t-nav-inline" role="navigation" aria-label="secondary navigation">
         <ul class="nav-inline__list">
     {%- for tab in tabs -%}
 
@@ -62,6 +62,12 @@
                     {% set options = {'data-href': tab.href} %}
                 {% endif %}
 
+                {% if tab_active is defined and tab_active == tab.id %}
+                    {% set options = options|merge({
+                        'aria-current': 'page'
+                    }) %}
+                {% endif %}
+
                 {%
                     set options = options|merge({
                         'class': tab.class|default ~ ' nav-inline__link',
@@ -72,6 +78,7 @@
                         'tabindex': tabindex
                     })
                 %}
+
                 {{ html.link(options|merge(tab.data|default({}))) }}
             </li>
     {%- endfor -%}
