--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -48,7 +48,7 @@
     }
 
     a {
-        color: color(gray, darker);
+        color: $gray-light;
         line-height: 16px;
         padding: 0;
         text-decoration: none;
