--- a/docs/_sass/_base.scss
+++ b/docs/_sass/_base.scss
@@ -52,14 +52,13 @@ img {
 table:not(.table) {
     margin-bottom: 1rem;
     width: 100%;
-    font-size: 85%;
-    border: 1px solid #e5e5e5;
+    border: 1px solid #ccc;
     border-collapse: collapse;
 
     td,
     th {
         padding: .25rem .5rem;
-        border: 1px solid #e5e5e5;
+        border: 1px solid #ccc;
     }
 
     th {
@@ -70,4 +69,33 @@ table:not(.table) {
     tbody tr:nth-child(odd) th {
         background-color: #f9f9f9;
     }
+}
+
+figure {
+  text-align: center;
+
+  img {
+    border: 1px solid #e5e5e5;
+    margin: 0 auto;
+    padding: .5rem;
+  }
+
+  figcaption {
+    color: #999;
+    font-size: .8rem;
+    margin-top: 1rem;
+  }
+}
+
+.callout {
+  border-bottom-right-radius: 50px;
+  border-top-right-radius: 50px;
+  margin-left: -50px;
+  padding: 1rem 0 1rem 50px;
+  display: block;
+}
+
+.callout--danger {
+  background-color: #a61b34;
+  color: #fff;
 }
