[docs] Add cards styles

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -76,6 +76,7 @@ $fa-css-prefix: 'icon';
     @import '../../stylesheets/_component.breadcrumb';
     @import '../../stylesheets/_component.buttons';
     @import '../../stylesheets/_component.button-groups';
+    @import '../../stylesheets/_component.cards';
     @import '../../stylesheets/_component.close';
 
     @at-root {
