Various a11y improvements to the main nav, inline nav (tabs) and breadcrumbs

--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -90,7 +90,7 @@
 
             <div class="toolbar">
 
-                <a href="#" class="mobile-menu-button t-mobile-menu-button">Menu</a>
+                <button class="mobile-menu-button t-mobile-menu-button" aria-expanded="false" aria-controls="aria-main-nav" aria-label="Toggle main menu">Menu</button>
 
                 {% block notifications %}{% endblock %}
 
