--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -462,7 +462,7 @@ $nav-color-darker: darken(color(jadu-blue, dark), 10%) !default;
 .nav-close,
 .nav-close-ltr {
     color: color(white);
-    display: block;
+    display: none;
     padding: 0 20px 23px;
     text-decoration: none;
     margin-top: 24px;
@@ -474,6 +474,13 @@ $nav-color-darker: darken(color(jadu-blue, dark), 10%) !default;
         content: '\f0a8';
         color: color(white);
     }
+
+    .nav-secondary.is-open &,
+    .nav-tertiary.is-open &,
+    .nav-quaternary.is-open & {
+        display: block;
+    }
+
 }
 
 .nav-close-ltr {
