--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -1,16 +1,16 @@
 .breadcrumb {
-    color: color(gray, light);
+    color: color(gray, dark); // must be AA 4.5:1
     margin-bottom: 11px;
     font-size: $font-size-small;
 
     a,
     a:link,
     a:visited {
-        color: color(gray, light);
+        color: color(gray, dark); // must be AA 4.5:1
     }
 
     a:active,
     a:hover {
-        color: color(gray);
+        color: color(link); // must be AA 4.5:1
     }
 }
