--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -120,6 +120,9 @@ $padding-small-horizontal:            10px !default;
 // -----------------------------------------------------------------------------
 
 $nav-primary-width:                   85px;
+$nav-color-light: darken(rgb(45, 134, 179), 2.5%) !default; // must be AA 4.5:1
+$nav-color-dark: darken(rgb(45, 134, 179), 7.5%) !default;
+$nav-color-darker: darken(rgb(45, 134, 179), 10%) !default;
 
 // -----------------------------------------------------------------------------
 //  Forms
@@ -228,8 +231,8 @@ $zindex-modal:                        3000 !default;
 //  Signin
 // -----------------------------------------------------------------------------
 
-$signin-bg-color:          rgba(51, 153, 204, .9);
-$signin-bg-color-fallback: rgb(51, 153, 204);
+$signin-bg-color:          rgba(34, 101, 134, .9);
+$signin-bg-color-fallback: rgb(34, 101, 134);
 
 $signin-full-width:        400px;
 $signin-mobile-width:      300px;
