Show modal examples on Lexicon modals page

--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -1,7 +1,7 @@
 {% extends "@pulsar/pulsar/components/tab.html.twig" %}
 
 {% block tab_content %}
-<div class="modal modal__example">
+<div class="modal modal__example show">
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
@@ -19,7 +19,7 @@
     </div><!-- /.modal__dialog -->
 </div><!-- /.modal -->
 
-<div class="modal modal--danger modal__example">
+<div class="modal modal--danger modal__example show">
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
